# NXTools

./: CMakeLists.txt
src/: main.cpp
